# weather-app-test

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/handlers/: __init__.py  forecast7days.py
backend/routers/: weather.py
backend/tests/: conftest.py  test_handlers.py  test_weather.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.html
frontend/src/lib/: ProgressBar.svelte
frontend/src/routes/: +page.svelte
