[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "KonstantinPopadyuk",email = "popadyuk-km@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "openmeteo-requests (>=1.5.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "pytest-asyncio (>=0.23.5,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=./ --cov-report=term-missing"

[project.optional-dependencies]
test = []  # Empty since we moved dependencies to main
